--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "primeicons": "^6.0.1",
     "primevue": "^3.27.0",
     "vue": "^3.2.45"
   },
