--- a/package.json
+++ b/package.json
@@ -1,19 +1,8 @@
 {
   "name": "vue-turkey-map",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "version": "0.0.11",
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/turkey-map.umd.cjs",
-  "module": "./dist/turkey-map.js",
-  "exports": {
-    ".": {
-      "import": "./dist/turkey-map.js",
-      "require": "./dist/turkey-map.umd.cjs"
-    },
-    "./dist/style.css": "./dist/style.css"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
